# gcgo

./: .gitignore  LICENSE  README.md  pyproject.toml
gcgo/: __main__.py  cli.py  streamer.py
gcgo/core/: __init__.py  clock.py  config.py  gcode.py  protocol.py  status.py  tables.py
gcgo/desktop/: __init__.py  display.py  keyboard.py  main.py  paths.py  transport.py  webmain.py
gcgo/frontends/: __init__.py  localui.py  terminal.py
gcgo/frontends/web/: __init__.py  server.py  ws.py
gcgo/frontends/web/static/: app.js  index.html  settings.html  settings.js  style.css
gcgo/micropython/: __init__.py  main.py  sd.py  transport.py  webmain.py
gcgo/ports/: __init__.py  base.py
tools/: fb_font.py  preview.py  preview_local.py  storyboard_local.py
