[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gcgo"
version = "0.1.0"
description = "Interactive GRBL gcode streamer"
requires-python = ">=3.11"
dependencies = [
    "pyserial>=3.5",
]

[project.scripts]
gcgo = "gcgo.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["gcgo"]
