[build-system]
requires = ["hatchling>=1.27"]   # PEP 639 license metadata support
build-backend = "hatchling.build"

[project]
name = "gcgo"
version = "0.1.0"
description = "Interactive GRBL gcode streamer"
authors = [{ name = "Sungeun K. Jeon", email = "chamnit@gmail.com" }]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "pyserial>=3.5",
]

[project.scripts]
gcgo = "gcgo.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["gcgo"]
